organize builds update readme

--- a/Builds/index.html
+++ b/Builds/index.html
@@ -35,7 +35,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">2020game</div>
+        <div class="title"><a href="https://github.com/jmattick/2020game">COVID Data Game</a></div> 
       </div>
     </div>
   </body>
